# pyandroid-dev

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  IMPROVEMENTS.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish-to-pypi.yml  tests.yml
docs/: MIGRATION_V1.4.md  api-reference.md  building-apk.md  getting-started.md  layouts.md  ui-components.md
examples/: simple_app.py
pyandroid/: __init__.py  __version__.py  core.py  ui.py  utils.py
pyandroid/backend/: __init__.py  kivy_backend.py
tests/: __init__.py  conftest.py  test_core.py  test_ui.py
