[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyandroid-dev"
version = "1.4.0"
authors = [
    {name = "Subhobhai", email = "sarkarsubhadip604@gmail.com"},
]
description = "A comprehensive Python library for creating Android-like applications with GUI support, improved error handling, and full type hints."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Environment :: X11 Applications",
    "Typing :: Typed",
]
keywords = ["android", "mobile", "app", "development", "kivy", "gui", "cross-platform", "framework"]
license = {text = "PyAndroid Custom License v1.0"}

[project.urls]
"Homepage" = "https://github.com/subhobhai943/pyandroid-dev"
"Bug Reports" = "https://github.com/subhobhai943/pyandroid-dev/issues"
"Source" = "https://github.com/subhobhai943/pyandroid-dev"
"Documentation" = "https://github.com/subhobhai943/pyandroid-dev/tree/main/docs"

[project.optional-dependencies]
gui = [
    "kivy>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
all = [
    "kivy>=2.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]  
include = ["pyandroid*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
